--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -3522,4 +3522,12 @@
 	 <!-- Font size sample text. This needs to be a very short string, as it is shown in
     multiple font sizes in a limited amount of space. -->
     <string name="font_size_sample">示例</string>
+	<!-- App Ops -->
+    <string name="appops_settings_title">权限管理</string>
+	<!-- Whether to allow mock SMS -->
+    <string name="allow_mock_sms">允许模拟短信</string>
+    <!-- Kill app long-press back -->
+    <string name="kill_app_longpress_back">长按关闭应用</string>
+    <string name="kill_app_longpress_back_summary">长按返回键强制关闭所处应用</string>
+    <string name="carbon_fibers_title">碳控制</string>
 </resources>
